1.4.9.3 No jar -- cleaned up issue in kbio, now all pre tags overflow together and I could avoid allowing user data to end up as inner html.

--- a/src/main/resources/static/styles/css/kB/index.css
+++ b/src/main/resources/static/styles/css/kB/index.css
@@ -21,6 +21,7 @@ body {
     font-family: "Lucida Console", "Courier New", monospace;
     margin: 0;
     color: var(--text-color);
+    overflow: revert;
 }
 
 /************
